<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CMainActivity" >
   
    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="name" >
    </EditText>
     <EditText
        android:id="@+id/input_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_name"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="15dp"
        android:ems="10" 
        android:hint="address">
    </EditText>
    <RadioGroup
        android:id="@+id/choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_addr"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shared_preferences" 
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file" />
         <RadioButton
            android:id="@+id/radio_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database" />
    </RadioGroup>
    
    <Button
        android:id="@+id/save"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice"
        android:layout_marginTop="15dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/show"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save"
        android:layout_alignBottom="@+id/save"
        android:layout_toRightOf="@+id/save"
        android:text="@string/show" 
        />


	<TextView
	    android:id="@+id/msg"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/save"
	    android:layout_marginTop="15dp"
	    android:text="show messages been saved" />

</RelativeLayout>
